[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/gui/main_menu.gd" type="Script" id=1]
[ext_resource path="res://images/gui/background_menu.png" type="Texture" id=2]
[ext_resource path="res://images/gui/new_game_button.png" type="Texture" id=3]
[ext_resource path="res://images/logo1.png" type="Texture" id=4]
[ext_resource path="res://images/gui/exit_button.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 30 )

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 240, 400 )
texture = ExtResource( 2 )

[node name="new_game_button" type="TouchScreenButton" parent="."]
position = Vector2( 60, 250 )
normal = ExtResource( 3 )
shape = SubResource( 1 )

[node name="exit_button" type="TouchScreenButton" parent="."]
position = Vector2( 60, 480 )
normal = ExtResource( 5 )
shape = SubResource( 1 )

[node name="logo" type="Sprite" parent="."]
position = Vector2( 240, 130 )
scale = Vector2( 0.527349, 0.536082 )
texture = ExtResource( 4 )

[node name="copyright_label" type="Label" parent="."]
margin_left = 30.0
margin_top = 770.0
margin_right = 278.0
margin_bottom = 784.0
text = "This game is licensed under the GPLv3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit_label" type="Label" parent="."]
margin_left = 30.0
margin_top = 754.0
margin_right = 196.0
margin_bottom = 768.0
text = "Copyright 2020 GodRabbit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version_label" type="Label" parent="."]
margin_left = 30.0
margin_top = 740.0
margin_right = 109.0
margin_bottom = 754.0
text = "V0.0.0-alpha"
__meta__ = {
"_edit_use_anchors_": false
}
